fixing spacing for mobile

--- a/app/assets/sass/partials/_base.scss
+++ b/app/assets/sass/partials/_base.scss
@@ -2,6 +2,7 @@ html, body {
   font-family: $baseFontFamily;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
   color: $green;
